traces/bug_609.txt
src/fflib/lex.cpp:792: error: DEAD_STORE
  The value written to &sep (type int) is never used.
Showing all 1 steps of the trace


src/fflib/lex.cpp:792:11: Write of unused value
790.         while (1) {
791.             cmm="";
792.             int sep =  EatCommentAndSpace(&cmm);
                 ^
793.             p += cmm;
794.             int rr = scan1();// do macro expantion
